@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 the Eclipse Milo Authors
+ * Copyright (c) 2025 the Eclipse Milo Authors
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -13,7 +13,6 @@ package org.eclipse.milo.opcua.stack.core.util;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
 class ListsTest {
@@ -28,8 +27,7 @@ class ListsTest {
   @Test
   void partition() {
     {
-      List<List<Integer>> partitions =
-          Lists.partition(List.of(1, 2, 3), 1).collect(Collectors.toList());
+      List<List<Integer>> partitions = Lists.partition(List.of(1, 2, 3), 1).toList();
       assertEquals(3, partitions.size());
       assertEquals(1, partitions.get(0).size());
       assertEquals(1, partitions.get(1).size());
@@ -37,16 +35,14 @@ class ListsTest {
     }
 
     {
-      List<List<Integer>> partitions =
-          Lists.partition(List.of(1, 2, 3), 2).collect(Collectors.toList());
+      List<List<Integer>> partitions = Lists.partition(List.of(1, 2, 3), 2).toList();
       assertEquals(2, partitions.size());
       assertEquals(2, partitions.get(0).size());
       assertEquals(1, partitions.get(1).size());
     }
 
     {
-      List<List<Integer>> partitions =
-          Lists.partition(List.of(1, 2, 3), 3).collect(Collectors.toList());
+      List<List<Integer>> partitions = Lists.partition(List.of(1, 2, 3), 3).toList();
       assertEquals(1, partitions.size());
       assertEquals(3, partitions.get(0).size());
     }
